@@ -1,5 +1,10 @@
 2024-01-22  Boruch Baum  <boruch_baum@gmx.com>
 
+	* diredc.el (diredc-hist-find-alternate-file): ): Bugfix: move focus
+	to opened files.
+
+2024-01-22  Boruch Baum  <boruch_baum@gmx.com>
+
 	* diredc.el (diredc--show-more-file-info-cmd): Redefine from
 	string to cons.
 	(diredc-show-more-file-info, diredc--show-more-file-info): Improve
